--- a/assignment_5/a4_starter/a4.config
+++ b/assignment_5/a4_starter/a4.config
@@ -1,3 +1,3 @@
-ecelinux6 10345 10346
-ecelinux7 10345 10346
-ecelinux8 10345 10346
+ecelinux6.uwaterloo.ca 10345 10346
+ecelinux7.uwaterloo.ca 10345 10346
+ecelinux8.uwaterloo.ca 10345 10346
